# ovro-alert

./: .gitignore  .gitmodules  LICENSE  README.md  Untitled Diagram.drawio  conftest.py  dsa_alert.py  environment-alert-client.yml  gcn-buffer_trigger.py  lwa_alert.py  pyproject.toml  relay_api.py  setup.py
chime-alert/: comet_receiver.py
drawio/: diagram.drawio.xml
gcn-alert/: gcn_kafka_receiver.py  gcn_receiver.py
ligo-alert/: analyze_map.py  environment.yml  example_file.txt  gcn-buffer_trigger.py  pulsar_dm_measurements.csv  pulsar_flux_measurements.csv  pulsars_for_LWA_testing.py  test_ligo_alert.py
ovro_alert/: alert_client.py  buffer_trigger.py  dsa_alert_client.py  lwa_alert_client.py  relay_api.py  relay_db.py  rn3_catalog_2023-2-8.json  static.py  voe_crossref.ipynb  voltage_beam_selection.py
ovro_alert/templates/: index.html
scripts/: alert_client_env.sh  deploy_alert_client.sh  smoke_alert_client_scheduling.py
slurm/: resubmit_voltage_beam_from_stdout.sh  submit_voltage_beam_file.sh  voltage_beam_pipeline.job
tests/: test_deployment_python36_import.py  test_lwa_voltage_beam_file_selection.py  test_lwa_voltage_pipeline_schedule.py  test_parse_voltage_beam_slurm_stdout.py  test_python_version_requirement.py  test_voltage_beam_job_integration.py  test_voltage_beam_job_script.py
